--- a/about_us.html
+++ b/about_us.html
@@ -4,33 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>E.Cafe</title>
     <link rel="stylesheet" href="css/index.css">
-</head>
+    <title>E.Cafe</title>
+   </head>
 <body>
+    <!-- main header -->
     <header>
-        <section>
-            <h1>E.Cafe</h1>
-            <nav>
-                <a href="about_us.html">About us</a>
-                <a href="how_to_get.html">How to get</a>
-                <a href="order_a_call.html">Order a call</a>
-            </nav>
-        </section>  
-            <nav>
-                <p>Choose Language:
-                <a href="#">English</a>
-                <a href="#">Українська</a>
-                <a href="#">Русский</a>
-                </p>
-            </nav>
+        <div class="language">    
+                <a href="#"> En </a>
+                <a href="#"> Ua </a>
+                <a href="#"> Pl </a>
+        </div>
+        <nav class="logo">
+        <img src="img/logo.png" alt="ecafelogo">
+            <p class="slogan">In any incomprehensible situation it is necessary to eat well</p>              
+        </nav>
     </header>
-    <main>
-            <div class="about">
-                <h1>About Us</h1>
-                <p>                                     
-             E.Cafe is an institution of catering and leisure.  
-             We offer complex breakfast until 13:00.                                                    Cooking coffee and food for self escort. 
+    <!--main header -->
+    <section  class="main_content">   
+        <nav class="navigation">
+            <a href="about_us.html">About us</a>
+            <a href="howToGet.html">How to get</a>
+            <a href="menu-big.html">Menu List</a>
+            <a href="order_a_call.html">Order a call</a>
+        </nav>
+    <section class="wellcometext">
+        <h1 class="headers">About Us</h1>
+            <p class="text">E.Cafe is an institution of catering and leisure.  
+             We offer complex breakfast until 13:00.Cooking coffee and food for self escort. 
             In addition to delicious breakfast and lunch, in our cafe
              you can order  a banquet, a children's holiday, as well as
             celebrate important events:  birthday or christening. 
@@ -42,18 +43,22 @@
             E.Cafe is a small family-friendly, but atmospheric
             restaurant  with good prices and delicious dishes. 
             We glad to invite you!</p>
-        </div>
-    </main>
+    </section>
+</section>
     <footer>
-        <div>
-        <p>+38097 000 00 00</p>
-        <p>+38097 000 00 00</p>
-        </div>
-        <div>
-            <a href="/" alt="facebooklogo"></a>
-            <a href="/" alt="instagramlogo"></a>
-        </div>
-        <p>Copyright 2018</p>
+        <nav class="infofooter">
+            <p class="linkedfooter">
+                <a target="_blank" href="https://www.instagram.com/e.cafe2/">
+                    <img src="img/instagram.png" alt="instagram">
+                </a>
+                <a target="_blank" href="https://www.facebook.com/e.cafe/" >
+                    <img src="img/facebook.png" alt="facebook"> 
+                </a>
+            </p>
+            <p class="phone">+38097 711 8788</p>
+            <p class="open-hours">Monday-Suturday 10 a.m - 11p.m   Sunday 12a.m - 12p.m</p>
+
+</nav>
     </footer>
 </body>
 </html>
