--- a/order_a_call.html
+++ b/order_a_call.html
@@ -4,47 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>E.Cafe</title>
     <link rel="stylesheet" href="css/index.css">
-</head>
+    <title>E.Cafe</title>
+   </head>
 <body>
+    <!-- main header -->
     <header>
-        <section>
-            <h1>E.Cafe</h1>
-            <nav>
-                <a href="about_us.html">About us</a>
-                <a href="how_to_get.html">How to get</a>
-                <a href="order_a_call.html">Order a call</a>
-            </nav>
-        </section>  
-            <nav>
-                <p>Choose Language:
-                <a href="#">English</a>
-                <a href="#">Українська</a>
-                <a href="#">Русский</a>
-                </p>
-            </nav>
-    </header>
-    <main>
-        <div class="order-call">
-       
-               
-
-    </main>
-    <footer>
-        <div>
-        <p>+38097 000 00 00
-        +38097 000 00 00</p>
+        <div class="language">    
+                <a href="#"> En </a>
+                <a href="#"> Ua </a>
+                <a href="#"> Pl </a>
         </div>
-        <p class="linkedfooter">
-            <a target="_blank" href="https://www.instagram.com/e.cafe2/">
-                <img src="intagram icon.png" alt="instagram">
-            </a>
-            <a target="_blank" href="https://www.facebook.com/e.cafe/" >
-                <img src="facebook icon.png" alt="facebook"> 
-            </a>>
-        </p>
-        <p>Copyright 2018</p>
+        <nav class="logo">
+        <img src="img/logo.png" alt="ecafelogo">
+            <p class="slogan">In any incomprehensible situation it is necessary to eat well</p>              
+        </nav>
+    </header>
+    <!--main header -->
+    <section  class="main_content">   
+        <nav class="navigation">
+            <a href="about_us.html">About us</a>
+            <a href="howToGet.html">How to get</a>
+            <a href="menu-big.html">Menu List</a>
+            <a href="order_a_call.html">Order a call</a>
+        </nav>
+        <div class="order-call">
+            <form method="POST" action="https://formspree.io/rynaleon@gmail.com">
+        <input id="name" name="name" type="text" placeholder="enter your name">
+        <input id="email" name="email" type="text" placeholder="enter your email">
+        <input id="tel" name="mobile number" type="text" placeholder="enter your mobile numder">
+        <textarea id="opinion" name="opinion" placeholder="your message" cols="150"></textarea>
+        <input type="submit" value="ORDER">
+    </form>
+</section>
+    <footer>
+        <nav class="infofooter">
+            <p class="linkedfooter">
+                <a target="_blank" href="https://www.instagram.com/e.cafe2/">
+                    <img src="img/instagram.png" alt="instagram">
+                </a>
+                <a target="_blank" href="https://www.facebook.com/e.cafe/" >
+                    <img src="img/facebook.png" alt="facebook"> 
+                </a>
+            </p>
+            <p class="phone">+38097 711 8788</p>
+            <p class="open-hours">Monday-Suturday 10 a.m - 11p.m   Sunday 12a.m - 12p.m</p>
+
+</nav>
     </footer>
 </body>
 </html>
