--- a/about_us.html
+++ b/about_us.html
@@ -15,21 +15,23 @@
                 <a href="#"> Ua </a>
                 <a href="#"> Pl </a>
         </div>
-        <nav class="logo">
-        <img src="img/logo.png" alt="ecafelogo">
-            <p class="slogan">In any incomprehensible situation it is necessary to eat well</p>              
+        <nav>
+        <a href="index.html">
+            <img src="img/logo.png" alt="ecafelogo" class="ecafelogo">
+        </a>
+        <p class="slogan">In any incomprehensible situation it is necessary to eat well</p>              
         </nav>
     </header>
     <!--main header -->
+    <main>
     <section  class="main_content">   
         <nav class="navigation">
             <a href="about_us.html">About us</a>
             <a href="howToGet.html">How to get</a>
-            <a href="menu-big.html">Menu List</a>
+            <a target="_blank" href="pdf/menu_big.pdf">Menu List</a>
             <a href="order_a_call.html">Order a call</a>
         </nav>
-    <section class="wellcometext">
-        <h1 class="headers">About Us</h1>
+            <h1 class="headers">About Us</h1>
             <p class="text">E.Cafe is an institution of catering and leisure.  
              We offer complex breakfast until 13:00.Cooking coffee and food for self escort. 
             In addition to delicious breakfast and lunch, in our cafe
@@ -45,6 +47,7 @@
             We glad to invite you!</p>
     </section>
 </section>
+</main>
     <footer>
         <nav class="infofooter">
             <p class="linkedfooter">
