--- a/index.html
+++ b/index.html
@@ -15,23 +15,26 @@
                 <a href="#"> Ua </a>
                 <a href="#"> Pl </a>
         </div>
-        <nav class="logo">
-        <img src="img/logo.png" alt="ecafelogo">
-            <p class="slogan">In any incomprehensible situation it is necessary to eat well</p>              
+        <nav>
+        <a href="index.html">
+            <img src="img/logo.png" alt="ecafelogo" class="ecafelogo">
+        </a>
+        <p class="slogan">In any incomprehensible situation it is necessary to eat well</p>              
         </nav>
     </header>
     <!--main header -->
-    <section  class="main_content">   
-        <nav class="navigation">
-            <a href="about_us.html">About us</a>
-            <a href="howToGet.html">How to get</a>
-            <a href="menu-big.html">Menu List</a>
-            <a href="order_a_call.html">Order a call</a>
-        </nav>
-        <p class="wellcometext">Welcome to E.Cafe Bar. We are proud by ourselves on providing fresh, homemade food for any occasion, along with great welcoming friendly atmosphere</p>
-        <h2 class="headers">Assortment</h2>
+    <main>
+        <section  class="main_content">   
+            <nav class="navigation">
+                <a href="about_us.html">About us</a>
+                <a href="howToGet.html">How to get</a>
+                <a target="_blank" href="pdf/menu_big.pdf">Menu List</a>
+                <a href="order_a_call.html">Order a call</a>
+            </nav>
+            <p class="wellcometext">Welcome to E.Cafe Bar. We are proud by ourselves on providing fresh, homemade food for any occasion, along with great welcoming friendly atmosphere</p>
+            <h2 class="headers">Assortment</h2>
 
-           <div class="assortment">
+            <div class="assortment">
                <article class="food">
                    <img src="img/salads.png" alt="salad">
                        <h3>Salads</h3>
@@ -57,21 +60,23 @@
                    <h3>Drinks</h3>
                </article>
            </div>
-    </section>
-    <footer>
-        <nav class="infofooter">
-            <p class="linkedfooter">
-                <a target="_blank" href="https://www.instagram.com/e.cafe2/">
-                    <img src="img/instagram.png" alt="instagram">
-                </a>
-                <a target="_blank" href="https://www.facebook.com/e.cafe/" >
-                    <img src="img/facebook.png" alt="facebook"> 
-                </a>
-            </p>
-            <p class="phone">+38097 711 8788</p>
-            <p class="open-hours">Monday-Suturday 10 a.m - 11p.m   Sunday 12a.m - 12p.m</p>
-
-</nav>
-    </footer>
+</main>
+<footer>
+    <nav class="infofooter">
+        <p class="linkedfooter">
+            <a target="_blank" href="https://www.instagram.com/e.cafe2/">
+                <img src="img/instagram.png" alt="instagram">
+            </a>
+            <a target="_blank" href="https://www.facebook.com/e.cafe/" >
+                <img src="img/facebook.png" alt="facebook"> 
+            </a>
+            <a target="_blank" href="https://www.facebook.com/e.cafe/" >
+            <img src="img/free-wifi.png" alt="free-wifi"> 
+            </a>
+        </p>
+        <p class="phone">+38097 711 8788</p>
+        <p class="open-hours">Monday-Suturday 10 a.m - 11p.m   Sunday 12a.m - 12p.m</p>
+    </nav>
+</footer>
 </body>
 </html>
