--- a/menu_big.html
+++ b/menu_big.html
@@ -23,26 +23,20 @@
         </nav>
     </header>
     <!--main header -->
-    <main>    
-        <section  class="main_content">   
-            <nav class="navigation">
-                <a href="about_us.html">About us</a>
-                <a href="howToGet.html">How to get</a>
-                <a target="_blank" href="pdf/menu_big.pdf">Menu List</a>
-                <a href="order_a_call.html">Order a call</a>
-            </nav>
-        </section>    
-        <section class="content">
-            <h1 class="headers">How to Get</h1>
-                <p class="text1"> 79016, Ukraine Lviv Odesska str. 2 (Near with Lviv Circus)
-                </p>
-            <div class ="padd">
-                <div class="map-responsive">    
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2573.1699497002983!2d24.007094515847438!3d49.839264139094325!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473add77f903def7%3A0x3bdcabb2b732265a!2z0YPQuy4g0J7QtNC10YHRgdC60LDRjywgMiwg0JvRjNCy0L7Qsiwg0JvRjNCy0L7QstGB0LrQsNGPINC-0LHQu9Cw0YHRgtGMLCA3OTAwMA!5e0!3m2!1sru!2sua!4v1538140138592" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-                </div>
-            </div>
-        </section>
-    </main>    
+<main>    
+    <section  class="main_content">   
+        <nav class="navigation">
+            <a href="about_us.html">About us</a>
+            <a href="howToGet.html">How to get</a>
+            <a href="menu_big.html">Menu List</a>
+            <a href="order_a_call.html">Order a call</a>
+        </nav>
+        <span class="menu">
+            <img src="img/menu_big_list1.jpg" alt="menu list big1">
+            <img src="img/menu_big_list2.jpg" alt="menu list big2">
+        </span>
+    </section>
+</main>    
     <footer>
         <nav class="infofooter">
             <p class="linkedfooter">
@@ -50,12 +44,13 @@
                     <img src="img/instagram.png" alt="instagram">
                 </a>
                 <a target="_blank" href="https://www.facebook.com/e.cafe/" >
-                    <img src="img/facebook.png" alt="facebook"></a> 
-
+                    <img src="img/facebook.png" alt="facebook"> 
+                </a>
             </p>
             <p class="phone">+38097 711 8788</p>
             <p class="open-hours">Monday-Suturday 10 a.m - 11p.m   Sunday 12a.m - 12p.m</p>
-        </nav>
+
+</nav>
     </footer>
 </body>
 </html>
